# Snake

./: CMakeLists.txt  main.cpp  shellFile.html
.cache/clangd/index/: aabb2d.h.2CEE978A78983320.idx  aabb2d.h.71FBF65B4BFDA184.idx  affine-mat.h.A69D53A0AC790990.idx  affine-mat.h.DBEA0178BD23E753.idx  affine-post.h.369DC0AB51B0D7A9.idx  affine-post.h.B8ECE23EEFD64225.idx  affine-pre.h.A9F206842D937B28.idx  affine-pre.h.BBB8B595D3B01B07.idx  affine.h.25CC5A4C2C8CF664.idx  affine.h.AAE88445ED1CB3E5.idx  affine.h.B262621035E1B06B.idx  affine.h.CD7A5836A31572D7.idx  affine2d.h.6162FC7AD02EC963.idx  affine2d.h.DD47D13E280B0245.idx  bezier.h.762928C585688C60.idx  bezier.h.79FC0AC589585721.idx  box.h.3CE81D0563D4D353.idx  box.h.7194B362317C8E80.idx  cam.h.837F80CA697F079D.idx  cam.h.9EFC28FED3ABE85E.idx  camera.c.8B51A45F7F377083.idx  camera.cpp.ECD80718B5CCD16D.idx  camera.h.15C9871B3E2C969F.idx  camera.h.F61E441D9411C0D2.idx  cglm.h.B8230D53453DBA7D.idx  cglm.h.DE944A1CF135171B.idx  color.h.1AF6000346A0F34F.idx  color.h.A2C8405379A216A2.idx  common.h.8F1290958EA288A2.idx  common.h.D95C81DA22F4F0D7.idx  cube.c.CF4BC44DD3611E41.idx  cube.cpp.FF5058650DADC090.idx  cube.h.4CCE703EFAFCC21B.idx  cube.h.C334EBAB1344DAEF.idx  curve.h.0CD0C0FE503BD5F6.idx  curve.h.E7C9FED82A72DF9F.idx  ease.h.4D1BD2806E8F110B.idx  ease.h.75E4746CB964EE02.idx  euler.h.91382C825C86CBF4.idx  euler.h.E40F27F9B8F96C32.idx  (+96 more)
include/: camera.h  cube.h  shader.h  shape.h  torus.h
shaders/: lightCubeFragmentShader.glsl  lightCubeVertexShader.glsl  objectFragmentShader.glsl  objectVertexShader.glsl
src/: camera.cpp  cube.cpp  main.cpp  shader.cpp  shape.cpp  torus.cpp
